fix submenu on small nav

--- a/css/custom.css
+++ b/css/custom.css
@@ -22,6 +22,12 @@
  }
  /*Header */
  
+ header {
+     position: fixed;
+     width: 100%;
+     z-index: 10;
+ }
+ 
  .top-nav {
      margin-left: 300px;
      transition: all .3s ease;
@@ -67,6 +73,7 @@
  
  .sm-nav main {
      padding-left: 60px;
+     padding-top: 60px;
  }
  
  .sm-nav .menu-parent span,
@@ -79,7 +86,7 @@
  }
  
  .sm-nav #menu-toggle {
-     position: absolute;
+     position: fixed;
      left: 0;
      z-index: 999;
      color: #fff;
@@ -101,11 +108,30 @@
  .sm-nav .nav-right .dropdown-button.btn {
      color: #fff;
  }
+ 
+ .sm-nav .collapsible-body {
+     position: absolute;
+     left: 100%;
+     top: 0;
+     min-width: 100px;
+ }
+ 
+ .sm-nav .side-nav .collapsible-body li a {
+     padding-left: 18px !important;
+ }
  /* Side Menu */
+ 
+ .side-nav {
+     overflow: visible;
+ }
  
  .side-menu > li > a,
  .side-menu li .fa {
      color: #fff;
+ }
+ 
+ .side-nav li {
+     position: relative;
  }
  
  .side-nav li.active {
@@ -149,7 +175,7 @@
  /* Nav right */
  
  .nav-right {
-     margin: 0;
+     margin: 0 15px;
      padding: 10px 0;
      height: 60px;
  }
@@ -185,12 +211,13 @@
  .user-avatar img {
      width: 40px;
      height: 40px;
-     margin-right: 5px;
+     margin-right: 10px;
  }
  /* Main Content */
  
  main {
      padding-left: 300px;
+     padding-top: 60px;
  }
  
  .right-col {
